RESOLVED FIXED275353
[WPE][GTK] REGRESSION(279912@main): fast/canvas/canvas-filter-repaint-rect.html fails
https://bugs.webkit.org/show_bug.cgi?id=275353
Summary [WPE][GTK] REGRESSION(279912@main): fast/canvas/canvas-filter-repaint-rect.ht...
Kimmo Kinnunen
Reported 2024-06-11 05:03:49 PDT
fast/canvas/canvas-filter-repaint-rect.html fails after bug 274750
Attachments
Kimmo Kinnunen
Comment 1 2024-06-11 05:04:44 PDT
The implementation in bug 274750 was very simple, so it's unclear why part of the shadows are not shown in the test. Either invalidation issue or draw issue?
Radar WebKit Bug Importer
Comment 2 2024-06-12 16:48:39 PDT
Said Abou-Hallawa
Comment 3 2024-06-12 17:03:34 PDT
EWS
Comment 4 2024-06-17 15:45:26 PDT
Committed 280091@main (5d58ef776121): <https://commits.webkit.org/280091@main> Reviewed commits have been landed. Closing PR #29774 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.